<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2020-2024 Radialbog9/TheJoeCoder and contributors.
  ~ You are allowed to use this code under the GPL3 license, which allows
  ~ commercial use, distribution, modification, and licensed works,
  ~ providing that you distribute your code under the same or similar license.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.radialbog9.spigot</groupId>
    <artifactId>MinecraftManhunt</artifactId>
    <packaging>jar</packaging>
    <version>4.0.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>md_5-public</id>
            <url>https://repo.md-5.net/content/groups/public/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>jeff-media-public</id>
            <url>https://hub.jeff-media.com/nexus/repository/jeff-media-public/</url>
        </repository>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.17.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <!-- Update Checker -->
        <dependency>
            <groupId>de.jeff_media</groupId>
            <artifactId>SpigotUpdateChecker</artifactId>
            <version>1.3.2</version>
            <scope>compile</scope>
        </dependency>
        <!-- SuperVanish -->
        <dependency>
            <groupId>com.github.LeonMangler</groupId>
            <artifactId>SuperVanish</artifactId>
            <version>6.2.19</version>
            <scope>provided</scope>
        </dependency>
        <!-- JetBrains Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- ProtocolLib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- LibsDisguises -->
        <dependency>
            <groupId>LibsDisguises</groupId>
            <artifactId>LibsDisguises</artifactId>
            <version>10.0.44</version>
            <scope>provided</scope>
        </dependency>
        <!-- bStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <!-- Cloud command framework -->
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-bukkit</artifactId>
            <version>1.8.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-annotations</artifactId>
            <version>1.8.4</version>
            <scope>compile</scope>
        </dependency>
        <!-- ConfigLib -->
        <dependency>
            <groupId>de.exlll</groupId>
            <artifactId>configlib-yaml</artifactId>
            <version>4.5.0</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package javadoc:javadoc</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <source>17</source>
                    <detectJavaApiLink>false</detectJavaApiLink>
                    <show>public</show>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <propertiesEncoding>UTF-8</propertiesEncoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>de.jeff_media:SpigotUpdateChecker</include>
                            <include>org.bstats:bstats-*</include>
                            <include>cloud.commandframework:cloud-*</include>
                            <include>io.leangen.geantyref:geantyref</include>
                            <include>de.exlll:configlib-yaml</include>
                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>de.jeff_media:SpigotUpdateChecker</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.bstats:bstats-*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>cloud.commandframework:cloud-*</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>io.leangen.geantyref:geantyref</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>de.exlll:configlib-yaml</artifact>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>de.jeff_media.updatechecker</pattern>
                            <shadedPattern>uk.radialbog9.spigot.manhunt.lib.updatechecker</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>uk.radialbog9.spigot.manhunt.lib.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>cloud.commandframework</pattern>
                            <shadedPattern>uk.radialbog9.spigot.manhunt.lib.cloud</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.leangen.geantyref</pattern>
                            <shadedPattern>uk.radialbog9.spigot.manhunt.lib.typetoken</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.exlll.configlib</pattern>
                            <shadedPattern>uk.radialbog9.spigot.manhunt.lib.configlib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
        <!-- Append build number to end of filename if building on Jenkins -->
        <profile>
            <id>jenkins-build</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <build>
                <finalName>${project.artifactId}-${project.version}_${env.BUILD_NUMBER}</finalName>
            </build>
        </profile>
    </profiles>
</project>
